--- a/package.json
+++ b/package.json
@@ -43,5 +43,13 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
+  },
+  "devDependencies": {
+    "@types/node": "^18.0.0",
+    "@types/react-native": "^0.67.8",
+    "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@types/react": "^18.0.14"
   }
 }
