chore(package-json): add types property

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-native-asymmetric-crypto",
   "version": "0.0.1",
   "description": "Hardware-backed asymmetric cryptography library for React Native",
+  "types": "lib/index.d.ts",
   "react-native": "src/index",
   "source": "src/index",
   "files": [
