--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,5 @@
     "strict": true,
     "target": "esnext"
   },
-  "exclude": ["PaperExample", "FabricExample"]
+  "exclude": ["lib", "PaperExample", "FabricExample"]
 }
