--- a/package.json
+++ b/package.json
@@ -48,10 +48,8 @@
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
     "@types/react-native": "^0.67.8",
     "typescript": "^4.7.4"
-  },
-  "dependencies": {
-    "@types/react": "^18.0.14"
   }
 }
