--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-asymmetric-crypto": "../library"
+    "react-native-asymmetric-crypto": "link:../library"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
